Se agregaron las imagenes, se termino la segunda parte del proyecto y si modifico el aside, nav

--- a/Index.html
+++ b/Index.html
@@ -9,13 +9,13 @@
 <body>
     <header>
         <h1>The World Of Programming</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="Html/Memes.html">Memes</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Memes</a></li>
-        </ul>
-    </nav>
     <section>
         <div>
             <img src="Img/1.jpeg" alt="Imagen Pesonal"><br>
@@ -53,21 +53,21 @@
                 lenguajes orientados a eventos.
             </p>
         </div>
-        <aside>
-            <h2>Páginas Favoritas</h2>
-            <ol>
-                <li><a href="https://www.youtube.com/">YouTube</a></li>
-                <li><a href="https://cuevana3.io/">Cuevana 3</a></li>
-                <li><a href="https://www.instagram.com/?hl=es-la">Instagram</a></li>
-                <li><a href="https://www.facebook.com/">Facebook</a></li>
-                <li><a href="https://plataformavirtual.itla.edu.do">ITLA</a></li>
-            </ol>
-        </aside>
-        <hr>
-        <footer>
-            <p>Calle Anacaona #43, Villa Mella || danny20011010@gmail.com || 829-587-2520 &copy;</p>
-        </footer>
     </section>
+    <aside>
+        <h2>Páginas Favoritas</h2>
+        <ol>
+            <li><a href="https://www.youtube.com/">YouTube</a></li>
+            <li><a href="https://cuevana3.io/">Cuevana 3</a></li>
+            <li><a href="https://www.instagram.com/?hl=es-la">Instagram</a></li>
+            <li><a href="https://www.facebook.com/">Facebook</a></li>
+            <li><a href="https://plataformavirtual.itla.edu.do">ITLA</a></li>
+        </ol>
+    </aside>
+    <hr>
+    <footer>
+        <p>Calle Anacaona #43, Villa Mella || danny20011010@gmail.com || 829-587-2520 &copy;</p>
+    </footer>
 </body>
 
 </html>
