Se le aplico Estilos

--- a/Html/Memes.html
+++ b/Html/Memes.html
@@ -3,17 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>MEMES</title>
+        <link rel="Stylesheet" href="../Css/MemeStyle.css">
     </head>
     <body>
         <header>
             <h1>MEMES</h1>
+            <nav id="Menu">
+                <ul>
+                    <li><a href="../Index.html">Home</a></li>
+                    <li><a href="#">Memes</a></li>
+                </ul>
+                <div class="ClearFlix"></div>
+            </nav>
         </header>
-        <nav>
-            <ul>
-                <li><a href="../Index.html">HOME</a></li>
-                <li><a href="#">Memes</a></li>
-            </ul>
-        </nav>
         <section>
             <table>
                 <tr>
@@ -54,7 +56,6 @@
                 </tr>
             </table>
         </section>
-        <hr>
         <footer>
             <p>Calle Anacaona #43, Villa Mella || danny20011010@gmail.com || 829-587-2520 &copy;</p>
         </footer>
