--- a/Index.html
+++ b/Index.html
@@ -4,66 +4,82 @@
 <head>
     <meta charset="UTF-8">
     <title>World of Programming</title>
+    <link rel="stylesheet" href="Css/Style.css">
 </head>
+
 <body>
     <header>
         <h1>The World Of Programming</h1>
+        <nav id="Menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="Html/Memes.html">Memes</a></li>
+                <div class="ClearFlix"></div>
+            </ul>
+            
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="Html/Memes.html">Memes</a></li>
-        </ul>
-    </nav>
     <section>
-        <div>
-            <img src="Img/1.jpeg" alt="Imagen Pesonal"><br>
-            <label>Danny Ozuna Vasquez</label><br>
-            <label>2019-7992</label><br>
-            <label>danny20011010@gmail.com</label>
-        </div>
-        <div>
-            <h2>Historia de la Programación</h2>
-            <p>La historia de la Programación está relacionada directamente con la aparición de los computadores, que ya
-                desde el siglo XV tuvo sus inicios con la construcción de una máquina que realizaba operaciones básicas
-                y raíces cuadradas (Gottfried Wilheml von Leibniz); aunque en realidad la primera gran influencia hacia
-                la creación de los computadores fue la máquina diferencial para el cálculo de polinomios, proyecto no
-                concluido de Charles Babbage (1793-1871) con el apoyo de Lady Ada Countess of Lovelace (1815-1852),
-                primera persona que incursionó en la programación y de quien proviene el nombre del lenguaje de
-                programación ADA creado por el DoD (Departamento de defensa de Estados Unidos) en la década de 1970.
-            </p>
-            <p>Luego los avances en las ciencias informáticas han sido muy acelerados, se reemplazó los tubos al vacío
-                por transistores en 1958 y en el mismo año, se sustituyeron por circuitos integrados, y en 1961 se
-                miniaturizaron en chips de silicio. En 1971 apareció el primer microprocesador de Intel; y en 1973 el
-                primer sistema operativo CP/M. El primer computador personal es comercializado por IBM en el año 1980.
-            </p>
-            <p>De acuerdo a este breve viaje por la historia, la programación está vinculada a la aparición de los
-                computadores, y los lenguajes tuvieron también su evolución. Inicialmente se programaba en código
-                binario, es decir en cadenas de 0s y 1s, que es el lenguaje que entiende directamente el computador,
-                tarea extremadamente difícil; luego se creó el lenguaje ensamblador, que aunque era lo mismo que
-                programar en binario, al estar en letras era más fácil de recordar. Posteriormente aparecieron lenguajes
-                de alto nivel, que en general, utilizan palabras en inglés, para dar las órdenes a seguir, para lo cual
-                utilizan un proceso intermedio entre el lenguaje máquina y el nuevo código llamado código fuente, este
-                proceso puede ser un compilador o un intérprete.
-            </p>
-            <p>Un compilador lee todas las instrucciones y genera un resultado; un intérprete ejecuta y genera
-                resultados línea a línea. En cualquier caso han aparecido nuevos lenguajes de programación, unos
-                denominados estructurados y en la actualidad en cambio los lenguajes orientados a objetos y los
-                lenguajes orientados a eventos.
-            </p>
-        </div>
+        <main>
+            <div id="Personal">
+                <img src="Img/1.jpeg" alt="Imagen Pesonal"><br>
+                <p>Danny Ozuna Vasquez</p>
+                <p>2019-7992</p>
+                <p>danny20011010@gmail.com</p>
+            </div>
+            <div id="Information">
+                <h2>Historia de la Programación</h2>
+                <p>La historia de la Programación está relacionada directamente con la aparición de los computadores,
+                    que ya
+                    desde el siglo XV tuvo sus inicios con la construcción de una máquina que realizaba operaciones
+                    básicas
+                    y raíces cuadradas (Gottfried Wilheml von Leibniz); aunque en realidad la primera gran influencia
+                    hacia
+                    la creación de los computadores fue la máquina diferencial para el cálculo de polinomios, proyecto
+                    no
+                    concluido de Charles Babbage (1793-1871) con el apoyo de Lady Ada Countess of Lovelace (1815-1852),
+                    primera persona que incursionó en la programación y de quien proviene el nombre del lenguaje de
+                    programación ADA creado por el DoD (Departamento de defensa de Estados Unidos) en la década de 1970.
+                </p>
+                <p>Luego los avances en las ciencias informáticas han sido muy acelerados, se reemplazó los tubos al
+                    vacío
+                    por transistores en 1958 y en el mismo año, se sustituyeron por circuitos integrados, y en 1961 se
+                    miniaturizaron en chips de silicio. En 1971 apareció el primer microprocesador de Intel; y en 1973
+                    el
+                    primer sistema operativo CP/M. El primer computador personal es comercializado por IBM en el año
+                    1980.
+                </p>
+                <p>De acuerdo a este breve viaje por la historia, la programación está vinculada a la aparición de los
+                    computadores, y los lenguajes tuvieron también su evolución. Inicialmente se programaba en código
+                    binario, es decir en cadenas de 0s y 1s, que es el lenguaje que entiende directamente el computador,
+                    tarea extremadamente difícil; luego se creó el lenguaje ensamblador, que aunque era lo mismo que
+                    programar en binario, al estar en letras era más fácil de recordar. Posteriormente aparecieron
+                    lenguajes
+                    de alto nivel, que en general, utilizan palabras en inglés, para dar las órdenes a seguir, para lo
+                    cual
+                    utilizan un proceso intermedio entre el lenguaje máquina y el nuevo código llamado código fuente,
+                    este
+                    proceso puede ser un compilador o un intérprete.
+                </p>
+                <p>Un compilador lee todas las instrucciones y genera un resultado; un intérprete ejecuta y genera
+                    resultados línea a línea. En cualquier caso han aparecido nuevos lenguajes de programación, unos
+                    denominados estructurados y en la actualidad en cambio los lenguajes orientados a objetos y los
+                    lenguajes orientados a eventos.
+                </p>
+            </div>
+        </main>
+        <aside>
+            <h2>Páginas Favoritas</h2>
+            <ol>
+                <li><a href="https://www.youtube.com/">YouTube</a></li>
+                <li><a href="https://cuevana3.io/">Cuevana 3</a></li>
+                <li><a href="https://www.instagram.com/?hl=es-la">Instagram</a></li>
+                <li><a href="https://www.facebook.com/">Facebook</a></li>
+                <li><a href="https://plataformavirtual.itla.edu.do">ITLA</a></li>
+            </ol>
+        </aside>
+        <div class="ClearFlix"></div>
     </section>
-    <aside>
-        <h2>Páginas Favoritas</h2>
-        <ol>
-            <li><a href="https://www.youtube.com/">YouTube</a></li>
-            <li><a href="https://cuevana3.io/">Cuevana 3</a></li>
-            <li><a href="https://www.instagram.com/?hl=es-la">Instagram</a></li>
-            <li><a href="https://www.facebook.com/">Facebook</a></li>
-            <li><a href="https://plataformavirtual.itla.edu.do">ITLA</a></li>
-        </ol>
-    </aside>
-    <hr>
     <footer>
         <p>Calle Anacaona #43, Villa Mella || danny20011010@gmail.com || 829-587-2520 &copy;</p>
     </footer>
